# Graphical-Application-Monitor

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  configure.ac.bak  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gtk_windowwatcher  gtk_windowwatcher.glade  gtk_windowwatcher.glade~  gtk_windowwatcher.h  main.c  main.c~
src/.deps/: callbacks.Po  main.Po
